--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,11 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "require": "^2.4.20",
+    "uuid": "^8.3.2"
   },
   "author": "",
   "license": "ISC"
+  
 }
